--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -1,4 +1,4 @@
-\chapter{Příparava}
+\chapter{Příprava} \label{swordfightingIntroChapter}
 V této kapitole uvedeme čtenáře do problematiky boje s chladnou zbraní - velmi stručně nastíníme jeho vývoj a metodiku v reálném světě a následně do hloubky rozebereme mechaniky, skrze které ho adaptuje svět akčních videoher, a problémy, které při tom musí řešit.
 
 
