--- a/cs/kap04.tex
+++ b/cs/kap04.tex
@@ -1,6 +1,8 @@
 \chapter{Návrh}
 
-Zde provedeme celkový návrh řešení - čtenáři představíme objektový návrh, který bude použit při jeho implementaci, a poté zevrubně prodiskutujeme metody zpracování uživatelského vstupu pro účely ovládání meče a hráčské postavy.
+Nyní by již čtenář měl být seznámen s cílem naší práce i s nástroji, které k jeho dosažení hodláme použít. Přistupme tedy k návrhu našeho řešení.
+
+V této kapitole nejprve čtenáři představíme objektový návrh, který bude použit při implementaci, a poté zevrubně prodiskutujeme metody zpracování uživatelského vstupu pro účely ovládání meče a hráčské postavy.
 
 
 \section{Objektový návrh}
