--- a/cs/kap01.tex
+++ b/cs/kap01.tex
@@ -214,7 +214,7 @@ Finálně, pokud jsme všechny tyto problémy vyřešili, čeká nás implementa
 \bigbreak
 Vidíme, že poskytnout hráči přímou kontrolu nad mečem, je nevděčný úkol vyžadující mnoho kompromisů. V historii najdeme pouze několik her, které se s ním pokusily popasovat, každá svým unikátním způsobem. Na ty se nyní podíváme blíže.
 
-\subsection{Die by the Sword}
+\subsection{Die by the Sword} \label{dieByTheSwordDescriptionSubsection}
 
 Průkopníkem v této oblasti je Die by the Sword \cite{DieByTheSword}, hra vydaná kalifornskou společností Treyarch Corporation roku 1998. 
 
