--- a/cs/seznamzkratek.tex
+++ b/cs/seznamzkratek.tex
@@ -33,3 +33,12 @@
     short=NPC,
     long=Non-player Character - nehráčská (počítačem řízená) postava,
 }
+
+\DeclareAcronym{DbtS}{
+    short=DbtS,
+    long=Die by the Sword,
+}
+\DeclareAcronym{KCD}{
+    short=KC:D,
+    long=Kingdom Come: Deliverance,
+}
