ch.2 small correction

--- a/cs/kap02.tex
+++ b/cs/kap02.tex
@@ -22,7 +22,7 @@ Docházíme tedy k závěru, že náš výsledek by měl vnitřně umožnit \tex
 
 Uživateli nabídneme \textbf{ovládání pro myš a klávesnici}. Pokusíme se navrhnout co nejlepší, mělo by být ideálně alespoň na srovnatelné úrovni použitelnosti jako ovládání myší v \acs{DbtS}. Prioritou je však spíše jeho všestrannost a myšlenková uchopitelnost - aby mohlo sloužit jako \textbf{univerzální laťka}, proti které lze dobře srovnávat experimentální alternativy. 
 
-Nejvyšší prioritou je rovněž kvalita implementačního kódu - taková, aby bylo umožněno co nejjednodušší přidávání nových experimentálních modulů pro ovládání.
+Nejvyšší prioritou je rovněž kvalita a modularita implementačního kódu. Ta musí být na takové úrovni, aby bylo umožněno co nejjednodušší přidávání nových experimentálních modulů pro ovládání.
 
 \section{Jaké nástroje použijeme}
 
