--- a/cs/literatura.bib
+++ b/cs/literatura.bib
@@ -1,7 +1,7 @@
 @software{Unity,
   author = {{Unity Technologies}},
   title = {Unity Engine},
-  url = {https://unity.com/},
+  url = {https://docs.unity3d.com/2022.2/Documentation/Manual},
   version = {2022.2.10f},
   date = {2023-03-25},
 }
@@ -66,6 +66,11 @@
   url             = {https://www.jstor.org/stable/1302940?seq=1},
 }
 
+@misc{ItchIo,
+  title = {itch.io},
+  howpublished = {\url{https://itch.io/}},
+  note = {Accessed: 2023-04-23}
+}
 
 @article{Satrh,
   author          = {Vojáček, Tomáš "Vojcl"},
